Update build.sh to run automatic modules